Small refactoring of default value codegen

--- a/Makefile.test
+++ b/Makefile.test
@@ -75,7 +75,7 @@ $(INTEGRATION_TESTS_DIR)/test10_cpp.tsk: \
 	$(PROTOC) --cpp_out $(INTEGRATION_TESTS_DIR) -I $(PB_HINC) -I $(OCAMLOPTIONS_HINC) -I $(INTEGRATION_TESTS_DIR) $<
 
 %_pb.ml %_pb.mli : %.proto bin.byte bin.native
-	$(ML_PROTOC) -I $(INTEGRATION_TESTS_DIR) -ml_out $(INTEGRATION_TESTS_DIR) $<
+	export OCAMLRUNPARAM="b" && $(ML_PROTOC) -I $(INTEGRATION_TESTS_DIR) -ml_out $(INTEGRATION_TESTS_DIR) $<
  
 %_ml.native: %_pb.mli %_pb.ml %_ml.ml 
 	$(OCB) -tag debug -I $(INTEGRATION_TESTS_DIR) -pkg unix $@ 
