--- a/Makefile.test
+++ b/Makefile.test
@@ -50,7 +50,7 @@ unit-tests:
 # implementation
 
 # location of where the Google protoc compiler is installed  
-PB_INSTALL = ../../install/build
+PB_INSTALL = /usr/local/
 PB_HINC    = $(PB_INSTALL)/include/
 PB_LINC    = $(PB_INSTALL)/lib/
 PROTOC     = $(PB_INSTALL)/bin/protoc 
@@ -59,6 +59,8 @@ export LD_LIBRARY_PATH=$(PB_LINC)
 
 ML_PROTOC=./ocaml-protoc -I $(OCAMLOPTIONS_HINC) -I $(PB_HINC)
 
+$(OCAMLOPTIONS_HINC)/ocamloptions.pb.cc: $(OCAMLOPTIONS_HINC)/ocamloptions.proto
+	cd $(OCAMLOPTIONS_HINC) && $(PROTOC) --cpp_out ./ -I ./ -I $(abspath $(PB_HINC)) ocamloptions.proto
 
 %_cpp.tsk: %_cpp.cpp %.pb.cc $(OCAMLOPTIONS_HINC)/ocamloptions.pb.cc
 	$(CXX) $(CPPFLAGS) -I ./ -I $(INTEGRATION_TESTS_DIR) -I $(OCAMLOPTIONS_HINC) -I $(PB_HINC) $? -L $(PB_LINC) -l protobuf -o $@
@@ -99,7 +101,8 @@ testCompat: $(INTEGRATION_TESTS_DIR)/test03_cpp.tsk $(INTEGRATION_TESTS_DIR)/tes
 .PHONY: integration
 
 integration: test01 test02 test05 test06 test07 test08 test09 test10 \
-	         test11 test12 test13 test14 test15 test17 test17 testCompat 
+	         test11 test12 test13 test14 test15 test16 test17 test18 \
+			 test19 testCompat 
 
 #
 # Google Unittest 
