--- a/Makefile.test
+++ b/Makefile.test
@@ -16,6 +16,7 @@ export CPPFLAGS
 
 # unit test of the ocaml-protoc internals  
 unit-tests: 		
+	$(OCB) $(UNIT_TESTS_DIR)/parse_extension_range.native
 	$(OCB) $(UNIT_TESTS_DIR)/parse_field_options.native 
 	$(OCB) $(UNIT_TESTS_DIR)/parse_file_options.native 
 	$(OCB) $(UNIT_TESTS_DIR)/parse_fields.native 
@@ -28,6 +29,7 @@ unit-tests:
 	$(OCB) $(UNIT_TESTS_DIR)/ocaml_codegen_test.native
 	$(OCB) $(UNIT_TESTS_DIR)/graph_test.native
 	$(OCB) $(UNIT_TESTS_DIR)/pbrt_array.native
+	./parse_extension_range.native
 	./parse_field_options.native
 	./parse_file_options.native
 	./parse_fields.native
