--- a/Makefile.test
+++ b/Makefile.test
@@ -110,7 +110,7 @@ testCompat: $(INTEGRATION_TESTS_DIR)/test03_cpp.tsk $(INTEGRATION_TESTS_DIR)/tes
 
 integration: test01 test02 test05 test06 test07 test08 test09 test10 \
 	           test11 test12 test13 test14 test15 test16 test17 test18 \
-			       test19 test20 test21 testCompat 
+			       test19 test20 test21 test22 testCompat 
 
 #
 # Google Unittest 
