--- a/Makefile.test
+++ b/Makefile.test
@@ -16,12 +16,12 @@ export CPPFLAGS
 
 # unit test of the ocaml-protoc internals  
 unit-tests: 		
+	$(OCB) $(UNIT_TESTS_DIR)/parse_message.native 
 	$(OCB) $(UNIT_TESTS_DIR)/parse_extension_range.native
 	$(OCB) $(UNIT_TESTS_DIR)/parse_field_options.native 
 	$(OCB) $(UNIT_TESTS_DIR)/parse_file_options.native 
 	$(OCB) $(UNIT_TESTS_DIR)/parse_fields.native 
 	$(OCB) $(UNIT_TESTS_DIR)/parse_enum.native
-	$(OCB) $(UNIT_TESTS_DIR)/parse_message.native 
 	$(OCB) $(UNIT_TESTS_DIR)/parse_import.native 
 	$(OCB) $(UNIT_TESTS_DIR)/pbtt_compile_p1.native 
 	$(OCB) $(UNIT_TESTS_DIR)/pbtt_compile_p2.native 
@@ -29,19 +29,19 @@ unit-tests:
 	$(OCB) $(UNIT_TESTS_DIR)/ocaml_codegen_test.native
 	$(OCB) $(UNIT_TESTS_DIR)/graph_test.native
 	$(OCB) $(UNIT_TESTS_DIR)/pbrt_array.native
-	./parse_extension_range.native
-	./parse_field_options.native
-	./parse_file_options.native
-	./parse_fields.native
-	./parse_enum.native
-	./parse_message.native
-	./parse_import.native
-	./pbtt_compile_p1.native
-	./pbtt_compile_p2.native
-	./backend_ocaml_test.native
-	./ocaml_codegen_test.native
-	./graph_test.native
-	./pbrt_array.native
+	export OCAMLRUNPARAM="b" && ./parse_message.native
+	export OCAMLRUNPARAM="b" && ./parse_extension_range.native
+	export OCAMLRUNPARAM="b" && ./parse_field_options.native
+	export OCAMLRUNPARAM="b" && ./parse_file_options.native
+	export OCAMLRUNPARAM="b" && ./parse_fields.native
+	export OCAMLRUNPARAM="b" && ./parse_enum.native
+	export OCAMLRUNPARAM="b" && ./parse_import.native
+	export OCAMLRUNPARAM="b" && ./pbtt_compile_p1.native
+	export OCAMLRUNPARAM="b" && ./pbtt_compile_p2.native
+	export OCAMLRUNPARAM="b" && ./backend_ocaml_test.native
+	export OCAMLRUNPARAM="b" && ./ocaml_codegen_test.native
+	export OCAMLRUNPARAM="b" && ./graph_test.native
+	export OCAMLRUNPARAM="b" && ./pbrt_array.native
 
 #
 # Integration tests
@@ -52,7 +52,7 @@ unit-tests:
 # implementation
 
 # location of where the Google protoc compiler is installed  
-PB_INSTALL = /usr/local/
+PB_INSTALL = /Users/maximeransan/Documents/protobuf
 PB_HINC    = $(PB_INSTALL)/include/
 PB_LINC    = $(PB_INSTALL)/lib/
 PROTOC     = $(PB_INSTALL)/bin/protoc 
