--- a/Makefile.test
+++ b/Makefile.test
@@ -146,7 +146,7 @@ all-tests: unit-tests integration google_unittest testCompat
 .PHONY: all-examples
 
 example%.native: src/examples/example%.ml src/examples/example%.proto bin.byte bin.native 
-	$(ML_PROTOC) -ml_out src/examples/ ./src/examples/example$*.proto 
+	$(ML_PROTOC) -json -ml_out src/examples/ ./src/examples/example$*.proto 
 	$(OCB) -pkg yojson -I src/examples src/examples/example$*.native
 
 all-examples: example01.native example02.native example03.native example04.native example05.native
