--- a/Makefile.test
+++ b/Makefile.test
@@ -166,3 +166,13 @@ it: bin.native
 benchmark_single_ml.native: bin.byte
 	$(ML_PROTOC) -I $(BENCHMARK_DIR) -ml_out $(BENCHMARK_DIR) $(BENCHMARK_DIR)/benchmark.proto
 	$(OCB) -use-ocamlfind -pkg unix -I src/tests/benchmark $@ 
+
+#
+# Yojson
+# ------
+
+YOJSON_DIR=src/tests/yojson
+yojson: bin.byte 
+	./ocaml-protoc -yojson -ml_out $(YOJSON_DIR) $(YOJSON_DIR)/yojson_unittest.proto
+	$(OCB) -pkg yojson -I $(YOJSON_DIR) yojson_unittest_ml.byte
+	./yojson_unittest_ml.byte
