--- a/bsconfig.json
+++ b/bsconfig.json
@@ -2,17 +2,14 @@
   "name": "bs-ocaml-protoc",
   "sources": [
     {
-      "dir": "src/runtime",
-      "public": ["Pbrt", "Pbrt_json"],
+      "dir": "src/runtime-bs/src",
       "files": [
-        "pbrt.mli",
-        "pbrt.ml",
         "pbrt_bs.ml"
       ]
     },
     {
       "dir": "src/tests/bs",
-      "internal-depends": "../../runtime",
+      "internal-depends": "../../runtime-bs/src",
       "files": [
         "bs_unittest_types.mli",
         "bs_unittest_types.ml",
@@ -22,6 +19,6 @@
       ]
     }
   ],
-  "bs-dependencies": [ "bs-ppx_deriving_protobuf"],
+  "bs-dependencies": [ ],
   "generate-merlin": true 
 }
