--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "bs-ppx_deriving_protobuf": "^2.5.0"
   },
   "devDependencies": {
-    "bs-platform": "^1.5.0"
+    "bs-platform": "^1.6.0",
+    "bs-ocaml-protoc-json":"^0.1.x"
   },
   "peerDependencies": {
-    "bs-platform": "^1.5.0"
+    "bs-platform": "^1.6.0"
   },
   "scripts" : {
     "build" : "npm run gen && bsb -make-world",
