Fix proto3 repeated field encoding (packed by default)

--- a/Makefile.test
+++ b/Makefile.test
@@ -57,7 +57,7 @@ unit-tests:
 # implementation
 
 # location of where the Google protoc compiler is installed  
-PB_INSTALL = /usr/local/
+PB_INSTALL = /Users/maximeransan/Documents/protobuf
 PB_HINC    = $(PB_INSTALL)/include
 PB_LINC    = $(PB_INSTALL)/lib
 PROTOC     = $(PB_INSTALL)/bin/protoc 
