Add support for binary encoding for wrapper types

--- a/Makefile.test
+++ b/Makefile.test
@@ -17,37 +17,37 @@ export CPPFLAGS
 
 # unit test of the ocaml-protoc internals  
 unit-tests: 		
-	# $(OCB) $(UNIT_TESTS_DIR)/pbtt_compile_p2.byte 
-	# $(OCB) $(UNIT_TESTS_DIR)/test_typing.byte
-	# $(OCB) $(UNIT_TESTS_DIR)/verify_syntax_invariants.byte
-	# $(OCB) $(UNIT_TESTS_DIR)/parse_message.byte 
-	# $(OCB) $(UNIT_TESTS_DIR)/parse_extension_range.byte
-	# $(OCB) $(UNIT_TESTS_DIR)/parse_field_options.byte 
-	# $(OCB) $(UNIT_TESTS_DIR)/parse_file_options.byte 
-	# $(OCB) $(UNIT_TESTS_DIR)/parse_fields.byte 
-	# $(OCB) $(UNIT_TESTS_DIR)/parse_enum.byte
-	# $(OCB) $(UNIT_TESTS_DIR)/parse_import.byte 
-	# $(OCB) $(UNIT_TESTS_DIR)/pbtt_compile_p1.byte 
-	# $(OCB) $(UNIT_TESTS_DIR)/backend_ocaml_test.byte
-	# $(OCB) $(UNIT_TESTS_DIR)/ocaml_codegen_test.byte
-	# $(OCB) $(UNIT_TESTS_DIR)/graph_test.byte
-	# $(OCB) $(UNIT_TESTS_DIR)/pbrt_array.byte
+	$(OCB) $(UNIT_TESTS_DIR)/pbtt_compile_p2.byte 
+	$(OCB) $(UNIT_TESTS_DIR)/test_typing.byte
+	$(OCB) $(UNIT_TESTS_DIR)/verify_syntax_invariants.byte
+	$(OCB) $(UNIT_TESTS_DIR)/parse_message.byte 
+	$(OCB) $(UNIT_TESTS_DIR)/parse_extension_range.byte
+	$(OCB) $(UNIT_TESTS_DIR)/parse_field_options.byte 
+	$(OCB) $(UNIT_TESTS_DIR)/parse_file_options.byte 
+	$(OCB) $(UNIT_TESTS_DIR)/parse_fields.byte 
+	$(OCB) $(UNIT_TESTS_DIR)/parse_enum.byte
+	$(OCB) $(UNIT_TESTS_DIR)/parse_import.byte 
+	$(OCB) $(UNIT_TESTS_DIR)/pbtt_compile_p1.byte 
+	$(OCB) $(UNIT_TESTS_DIR)/backend_ocaml_test.byte
+	$(OCB) $(UNIT_TESTS_DIR)/ocaml_codegen_test.byte
+	$(OCB) $(UNIT_TESTS_DIR)/graph_test.byte
+	$(OCB) $(UNIT_TESTS_DIR)/pbrt_array.byte
 	$(OCB) $(UNIT_TESTS_DIR)/wrapper_encoding.byte
-	# export OCAMLRUNPARAM="b" && ./test_typing.byte
-	# export OCAMLRUNPARAM="b" && ./verify_syntax_invariants.byte
-	# export OCAMLRUNPARAM="b" && ./parse_message.byte
-	# export OCAMLRUNPARAM="b" && ./parse_extension_range.byte
-	# export OCAMLRUNPARAM="b" && ./parse_field_options.byte
-	# export OCAMLRUNPARAM="b" && ./parse_file_options.byte
-	# export OCAMLRUNPARAM="b" && ./parse_fields.byte
-	# export OCAMLRUNPARAM="b" && ./parse_enum.byte
-	# export OCAMLRUNPARAM="b" && ./parse_import.byte
-	# export OCAMLRUNPARAM="b" && ./pbtt_compile_p1.byte
-	# export OCAMLRUNPARAM="b" && ./pbtt_compile_p2.byte
-	# export OCAMLRUNPARAM="b" && ./backend_ocaml_test.byte
-	# export OCAMLRUNPARAM="b" && ./ocaml_codegen_test.byte
-	# export OCAMLRUNPARAM="b" && ./graph_test.byte
-	# export OCAMLRUNPARAM="b" && ./pbrt_array.byte
+	export OCAMLRUNPARAM="b" && ./test_typing.byte
+	export OCAMLRUNPARAM="b" && ./verify_syntax_invariants.byte
+	export OCAMLRUNPARAM="b" && ./parse_message.byte
+	export OCAMLRUNPARAM="b" && ./parse_extension_range.byte
+	export OCAMLRUNPARAM="b" && ./parse_field_options.byte
+	export OCAMLRUNPARAM="b" && ./parse_file_options.byte
+	export OCAMLRUNPARAM="b" && ./parse_fields.byte
+	export OCAMLRUNPARAM="b" && ./parse_enum.byte
+	export OCAMLRUNPARAM="b" && ./parse_import.byte
+	export OCAMLRUNPARAM="b" && ./pbtt_compile_p1.byte
+	export OCAMLRUNPARAM="b" && ./pbtt_compile_p2.byte
+	export OCAMLRUNPARAM="b" && ./backend_ocaml_test.byte
+	export OCAMLRUNPARAM="b" && ./ocaml_codegen_test.byte
+	export OCAMLRUNPARAM="b" && ./graph_test.byte
+	export OCAMLRUNPARAM="b" && ./pbrt_array.byte
 	export OCAMLRUNPARAM="b" && ./wrapper_encoding.byte
 
 #
@@ -135,7 +135,7 @@ testCompat: $(INTEGRATION_TESTS_DIR)/test03_cpp.tsk $(INTEGRATION_TESTS_DIR)/tes
 
 integration: test01 test02 test05 test06 test07 test08 test09 test10 \
 	           test11 test12 test13 test14 test15 test16 test17 test18 \
-			       test19 test20 test21 test22 test24 testCompat 
+			       test19 test20 test21 test22 test24 test26 testCompat 
 
 #
 # Google Unittest 
