--- a/Makefile.test
+++ b/Makefile.test
@@ -4,7 +4,7 @@ endif
 export CXX
 
 ifndef CPPFLAGS
-    CPPFLAGS = 
+    CPPFLAGS =
 endif
 CPPFLAGS+=-Wno-deprecated
 export CPPFLAGS
@@ -13,60 +13,27 @@ export CPPFLAGS
 # Unit tests
 # ----------
 
-.PHONY: unit-tests
+.PHONY: tests dune-all
 
-# unit test of the ocaml-protoc internals  
-unit-tests: 		
-	$(OCB) $(UNIT_TESTS_DIR)/pbtt_compile_p2.byte 
-	$(OCB) $(UNIT_TESTS_DIR)/test_typing.byte
-	$(OCB) $(UNIT_TESTS_DIR)/verify_syntax_invariants.byte
-	$(OCB) $(UNIT_TESTS_DIR)/parse_message.byte 
-	$(OCB) $(UNIT_TESTS_DIR)/parse_extension_range.byte
-	$(OCB) $(UNIT_TESTS_DIR)/parse_field_options.byte 
-	$(OCB) $(UNIT_TESTS_DIR)/parse_file_options.byte 
-	$(OCB) $(UNIT_TESTS_DIR)/parse_fields.byte 
-	$(OCB) $(UNIT_TESTS_DIR)/parse_enum.byte
-	$(OCB) $(UNIT_TESTS_DIR)/parse_import.byte 
-	$(OCB) $(UNIT_TESTS_DIR)/pbtt_compile_p1.byte 
-	$(OCB) $(UNIT_TESTS_DIR)/backend_ocaml_test.byte
-	$(OCB) $(UNIT_TESTS_DIR)/ocaml_codegen_test.byte
-	$(OCB) $(UNIT_TESTS_DIR)/graph_test.byte
-	$(OCB) $(UNIT_TESTS_DIR)/pbrt_array.byte
-	$(OCB) $(UNIT_TESTS_DIR)/wrapper_encoding.byte
-	export OCAMLRUNPARAM="b" && ./test_typing.byte
-	export OCAMLRUNPARAM="b" && ./verify_syntax_invariants.byte
-	export OCAMLRUNPARAM="b" && ./parse_message.byte
-	export OCAMLRUNPARAM="b" && ./parse_extension_range.byte
-	export OCAMLRUNPARAM="b" && ./parse_field_options.byte
-	export OCAMLRUNPARAM="b" && ./parse_file_options.byte
-	export OCAMLRUNPARAM="b" && ./parse_fields.byte
-	export OCAMLRUNPARAM="b" && ./parse_enum.byte
-	export OCAMLRUNPARAM="b" && ./parse_import.byte
-	export OCAMLRUNPARAM="b" && ./pbtt_compile_p1.byte
-	export OCAMLRUNPARAM="b" && ./pbtt_compile_p2.byte
-	export OCAMLRUNPARAM="b" && ./backend_ocaml_test.byte
-	export OCAMLRUNPARAM="b" && ./ocaml_codegen_test.byte
-	export OCAMLRUNPARAM="b" && ./graph_test.byte
-	export OCAMLRUNPARAM="b" && ./pbrt_array.byte
-	export OCAMLRUNPARAM="b" && ./wrapper_encoding.byte
+# unit test of the ocaml-protoc internals
+tests:
+	$(DUNE) build @runtest
 
 #
 # Integration tests
 # -----------------
 			
-# Integration tests with Google protoc (C++ target) to ensure that 
-# the generated OCaml code can encode/decode message compatible with Google 
+# Integration tests with Google protoc (C++ target) to ensure that
+# the generated OCaml code can encode/decode message compatible with Google
 # implementation
 
-# location of where the Google protoc compiler is installed  
-PB_INSTALL = /Users/maximeransan/Documents/protobuf
+# location of where the Google protoc compiler is installed
+PB_INSTALL = /usr/local
 PB_HINC    = $(PB_INSTALL)/include
 PB_LINC    = $(PB_INSTALL)/lib
-PROTOC     = $(PB_INSTALL)/bin/protoc 
+PROTOC     = $(PB_INSTALL)/bin/protoc
 
 export LD_LIBRARY_PATH=$(PB_LINC)
-
-ML_PROTOC=./ocaml-protoc -binary -pp -I $(OCAMLOPTIONS_HINC) -I $(PB_HINC)
 
 $(OCAMLOPTIONS_HINC)/ocamloptions.pb.cc: $(OCAMLOPTIONS_HINC)/ocamloptions.proto
 	cd $(OCAMLOPTIONS_HINC) && \
@@ -82,14 +49,14 @@ $(OCAMLOPTIONS_HINC)/ocamloptions.pb.cc: $(OCAMLOPTIONS_HINC)/ocamloptions.proto
 $(INTEGRATION_TESTS_DIR)/test10_cpp.tsk: \
 	$(INTEGRATION_TESTS_DIR)/test10_cpp.cpp \
 	$(INTEGRATION_TESTS_DIR)/test10.pb.cc \
-	$(INTEGRATION_TESTS_DIR)/test09.pb.cc 
+	$(INTEGRATION_TESTS_DIR)/test09.pb.cc
 	$(CXX) $(CPPFLAGS) \
 		-I ./ -I $(INTEGRATION_TESTS_DIR)  -I $(PB_HINC) \
 		-L $(PB_LINC) -l protobuf \
 		$? \
-		-o $@ 
+		-o $@
 
-.SECONDARY: 
+.SECONDARY:
 
 %.pb.cc: %.proto
 	$(PROTOC) \
@@ -97,62 +64,19 @@ $(INTEGRATION_TESTS_DIR)/test10_cpp.tsk: \
 		-I $(PB_HINC) -I $(OCAMLOPTIONS_HINC) -I $(INTEGRATION_TESTS_DIR) \
 		$<
 
-%_pb.ml %_pb.mli : %.proto bin.byte
-	export OCAMLRUNPARAM="b" && \
-		$(ML_PROTOC) \
-		-I $(INTEGRATION_TESTS_DIR) \
-		-ml_out $(INTEGRATION_TESTS_DIR) $<
 
-# Specialization of the above command is required for test01 since we add the extra 
-# cmd line argument "-ocaml_all_types_ppx" to test the override of custom file options from the 
-# cmd line. 
-$(INTEGRATION_TESTS_DIR)/test01_pb.ml $(INTEGRATION_TESTS_DIR)/test01_pb.mli : \
-	$(INTEGRATION_TESTS_DIR)/test01.proto bin.byte bin.byte
-	export OCAMLRUNPARAM="b" && \
-		$(ML_PROTOC) \
-		-ocaml_all_types_ppx "deriving show" \
-		-I $(INTEGRATION_TESTS_DIR) -ml_out $(INTEGRATION_TESTS_DIR) $<
-
-%_ml.byte: %_pb.mli %_pb.ml %_ml.ml 
-	$(OCB) -pkg ppx_deriving.show -tag debug -I $(INTEGRATION_TESTS_DIR) -pkg unix $@ 
-
-test%: $(INTEGRATION_TESTS_DIR)/test%_ml.byte \
-	     $(INTEGRATION_TESTS_DIR)/test%_cpp.tsk 
+test%: $(INTEGRATION_TESTS_DIR)/test%_cpp.tsk
+	$(DUNE) build $(INTEGRATION_TESTS_DIR)/test$*_ml.exe
 	$(INTEGRATION_TESTS_DIR)/test$*_cpp.tsk encode
-	time ./_build/$(INTEGRATION_TESTS_DIR)/test$*_ml.byte decode
-	./_build/$(INTEGRATION_TESTS_DIR)/test$*_ml.byte encode
+	time ./_build/default/$(INTEGRATION_TESTS_DIR)/test$*_ml.exe decode
+	./_build/default/$(INTEGRATION_TESTS_DIR)/test$*_ml.exe encode
 	time $(INTEGRATION_TESTS_DIR)/test$*_cpp.tsk decode
-
-.PHONY: testCompat 
-
-testCompat: $(INTEGRATION_TESTS_DIR)/test03_cpp.tsk $(INTEGRATION_TESTS_DIR)/test04_ml.byte
-	$(INTEGRATION_TESTS_DIR)/test03_cpp.tsk encode
-	./_build/$(INTEGRATION_TESTS_DIR)/test04_ml.byte decode
-	./_build/$(INTEGRATION_TESTS_DIR)/test04_ml.byte encode
-	$(INTEGRATION_TESTS_DIR)/test03_cpp.tsk decode
 
 .PHONY: integration
 
 integration: test01 test02 test05 test06 test07 test08 test09 test10 \
 	           test11 test12 test13 test14 test15 test16 test17 test18 \
-			       test19 test20 test21 test22 test24 test26 testCompat 
-
-#
-# Google Unittest 
-# ---------------
-
-# In this test we make sure we can successfully generate and compile
-# the code for the Google unittest.proto file. Because of some 
-# known limitation of `ocaml-protoc` some cases were commented 
-# out. 
-
-.PHONY: google_unittest
-
-google_unittest: bin.byte
-	$(ML_PROTOC) -I $(GOOGLE_UNITTEST_DIR) -ml_out $(GOOGLE_UNITTEST_DIR) $(GOOGLE_UNITTEST_DIR)/unittest_import.proto 
-	$(ML_PROTOC) -I $(GOOGLE_UNITTEST_DIR) -ml_out $(GOOGLE_UNITTEST_DIR) $(GOOGLE_UNITTEST_DIR)/unittest.proto 
-	$(OCB) -I $(GOOGLE_UNITTEST_DIR) google_unittest.byte
-	./google_unittest.byte
+			       test19 test20 test21 test22 test24 test26
 
 #
 # Yojson
@@ -160,7 +84,7 @@ google_unittest: bin.byte
 
 YOJSON_DIR=src/tests/yojson
 OCB_YOJSON=-pkgs yojson,ocaml-protoc-yojson
-yojson: bin.byte 
+yojson:
 	./ocaml-protoc -yojson -ml_out $(YOJSON_DIR) $(YOJSON_DIR)/yojson_unittest.proto
 	$(PROTOC) \
 		--cpp_out $(YOJSON_DIR) \
@@ -179,34 +103,4 @@ yojson: bin.byte
 	export OCAMLRUNPARAM="b" && ./yojson_unittest_ml.byte
 
 .PHONY: all-tests
-all-tests: unit-tests yojson integration google_unittest testCompat 
-
-#
-# Examples
-# --------
-
-# In this section we compile the example given in 
-# the '.md' Documentation
-
-.PHONY: all-examples
-
-example%.byte: src/examples/example%.ml src/examples/example%.proto bin.byte bin.byte
-	$(ML_PROTOC) -yojson -binary \
-		-ml_out src/examples/ ./src/examples/example$*.proto 
-	$(OCB) -I src/examples src/examples/example$*.byte
-
-all-examples: example01.byte example02.byte example03.byte example04.byte example05.byte
-
-
-#
-# Benchmarks
-# ----------
-
-# In this section we build benchmark tasks 
-
-.PHONY: benchmark_single_ml.native
-
-benchmark_single_ml.native: bin.byte
-	$(ML_PROTOC) -I $(BENCHMARK_DIR) -ml_out $(BENCHMARK_DIR) $(BENCHMARK_DIR)/benchmark.proto
-	$(OCB) -use-ocamlfind -pkg unix -I src/tests/benchmark $@ 
-
+all-tests: tests yojson integration 
