Use dune build system

--- a/ocaml-protoc.opam
+++ b/ocaml-protoc.opam
@@ -12,13 +12,8 @@ bug-reports:"https://github.com/mransan/ocaml-protoc/issues"
 dev-repo:"git+https://github.com/mransan/ocaml-protoc.git"
 license: "MIT"
 build: [
-  [make "lib.byte"]   
-  [make "lib.native"]
-  [make "bin.native"]
-]
-install: [
-  [make "lib.install" ]
-  [make "bin.install" "PREFIX=%{prefix}%" "BINDIR=%{bin}%"]
+  ["dune" "subst"] {pinned}
+  ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
   "ocaml" {>="4.02.1"}
