--- a/ocaml-protoc.opam
+++ b/ocaml-protoc.opam
@@ -17,7 +17,7 @@ build: [
 ]
 depends: [
   "ocaml" {>="4.02.1"}
-  "ocamlfind"  {build}
-  "ocamlbuild" {build}
+  "dune"  {build}
   "ppx_deriving_protobuf"
+  "stdlib-shims"
 ]
