--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "url": "https://github.com/mransan/ocaml-protoc"
   },
   "dependencies": {
-    "bs-ppx_deriving_protobuf": "^2.5.0"
   },
   "devDependencies": {
     "bs-platform": "^5.x.x",
@@ -25,7 +24,7 @@
   },
   "scripts": {
     "build": "npm run gen && bsb -make-world",
-    "gen": "./ocaml-protoc -bs -ml_out src/tests/bs src/tests/bs/bs_unittest.proto",
+    "gen": "dune build && ./_build/install/default/bin/ocaml-protoc -bs -ml_out src/tests/bs src/tests/bs/bs_unittest.proto",
     "test": "npm run build && node lib/js/src/tests/bs/"
   }
 }
