Improve integration tests

--- a/Makefile.test
+++ b/Makefile.test
@@ -76,7 +76,7 @@ test%: $(INTEGRATION_TESTS_DIR)/test%_cpp.tsk
 
 integration: test01 test02 test05 test06 test07 test08 test09 test10 \
 	           test11 test12 test13 test14 test15 test16 test17 test18 \
-			       test19 test20 test21 test22 test24 test26
+			       test19 test20 test21 test22 test23 test24 test26
 
 #
 # Yojson
