--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "bs-platform": "^5.x.x",
-    "bs-ocaml-protoc-json": "^0.1.x"
+    "bs-platform": "^7.x.x"
   },
   "scripts": {
     "build": "npm run gen && bsb -make-world",
