-- services parsing support

--- a/src/tests/unit-tests/dune
+++ b/src/tests/unit-tests/dune
@@ -9,6 +9,7 @@
     test_typing
     verify_syntax_invariants
     parse_message
+    parse_service
     parse_fields
     parse_field_options
     parse_file_options
