--- a/ocaml-protoc.opam
+++ b/ocaml-protoc.opam
@@ -12,7 +12,7 @@ bug-reports:"https://github.com/mransan/ocaml-protoc/issues"
 dev-repo:"git+https://github.com/mransan/ocaml-protoc.git"
 license: "MIT"
 build: [
-  ["dune" "subst"] {pinned}
+  ["dune" "subst"] {dev}
   ["dune" "build" "@install" "-p" name "-j" jobs]
   ["dune" "runtest" "-p" name "-j" jobs] {with-test}
   ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
