--- a/src/runtime/dune
+++ b/src/runtime/dune
@@ -1,8 +1,6 @@
 (library
  (name pbrt)
- (public_name ocaml-protoc)
+ (public_name pbrt)
  ; we need to increase -inline, so that the varint encoder/decoder can
  ; be remembered by the inliner.
- (ocamlopt_flags :standard -inline 100)
- (wrapped false)
-)
+ (ocamlopt_flags :standard -inline 100))
