hackish fix of integration tests

--- a/Makefile.test
+++ b/Makefile.test
@@ -28,7 +28,7 @@ tests:
 # implementation
 
 # location of where the Google protoc compiler is installed
-PB_INSTALL = /usr/local
+PB_INSTALL = /usr
 PB_HINC    = $(PB_INSTALL)/include
 PB_LINC    = $(PB_INSTALL)/lib
 PROTOC     = $(PB_INSTALL)/bin/protoc
@@ -85,7 +85,7 @@ integration: test01 test02 test05 test06 test07 test08 test09 test10 \
 YOJSON_DIR=src/tests/yojson
 OCB_YOJSON=-pkgs yojson,ocaml-protoc-yojson
 yojson:
-	./ocaml-protoc -yojson -ml_out $(YOJSON_DIR) $(YOJSON_DIR)/yojson_unittest.proto
+	dune exec src/ocaml-protoc/ocaml_protoc.exe -- -yojson -ml_out $(YOJSON_DIR) $(YOJSON_DIR)/yojson_unittest.proto
 	$(PROTOC) \
 		--cpp_out $(YOJSON_DIR) \
 		-I $(PB_HINC) -I $(OCAMLOPTIONS_HINC) -I $(YOJSON_DIR) \
